--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 <body>
     <div class="header">
         <h1>Birthday Weather Time Machine</h1>
-        <div class="subtitle">Discover what the weather was like on your special day!</div>
+        <div class="subtitle">Discover what the weather was like on your birthday!</div>
     </div>
  
     <div class="mode-selector">
