--- a/index.html
+++ b/index.html
@@ -753,4 +753,9 @@
            toast.textContent = message;
            toast.style.display = 'block';
            setTimeout(() => {
-               toast.style.display =
+               toast.style.display = 'none';
+           }, duration);
+       }
+   </script>
+</body>
+</html>
